--- a/client/src/component/signup.css
+++ b/client/src/component/signup.css
@@ -1,60 +1,74 @@
-.login, .signup {
-	width: 320px;
-	padding: 30px;
-	padding-top: 156px;
+.login,
+.signup {
+  width: 320px;
+  padding: 30px;
+  padding-top: 156px;
 }
 
-.login__field, .signup__field {
-	padding: 20px 0px;	
-	position: relative;	
+.signup {
+  padding-top: 0px;
 }
 
-.login__icon, .signup__icon {
-	position: absolute;
-	top: 30px;
-	color: #7875B5;
+.login__field,
+.signup__field {
+  padding: 20px 0px;
+  position: relative;
 }
 
-.login__input, .signup__input {
-	border: none;
-	border-bottom: 2px solid #D1D1D4;
-	background: none;
-	padding: 10px;
-	padding-left: 24px;
-	font-weight: 700;
-	width: 75%;
-	transition: .2s;
+.login__icon,
+.signup__icon {
+  position: absolute;
+  top: 30px;
+  color: #7875b5;
 }
 
-.login__input:active, .signup__input:active,
-.login__input:focus, .signup__input:focus,
-.login__input:hover, .signup__input:hover {
-	outline: none;
-	border-bottom-color: #6A679E;
+.login__input,
+.signup__input {
+  border: none;
+  border-bottom: 2px solid #d1d1d4;
+  background: none;
+  padding: 10px;
+  padding-left: 24px;
+  font-weight: 700;
+  width: 75%;
+  transition: 0.2s;
 }
 
-.login__submit, .signup__submit {
-	background: #fff;
-	font-size: 14px;
-	margin-top: 30px;
-	padding: 16px 20px;
-	border-radius: 26px;
-	border: 1px solid #D4D3E8;
-	text-transform: uppercase;
-	font-weight: 700;
-	display: flex;
-	align-items: center;
-	width: 100%;
-	color: #4C489D;
-	box-shadow: 0px 2px 2px #5C5696;
-	cursor: pointer;
-	transition: .2s;
+.login__input:active,
+.signup__input:active,
+.login__input:focus,
+.signup__input:focus,
+.login__input:hover,
+.signup__input:hover {
+  outline: none;
+  border-bottom-color: #6a679e;
 }
 
-.login__submit:active, .signup__submit:active,
-.login__submit:focus, .signup__submit:focus,
-.login__submit:hover, .signup__submit:hover {
-	border-color: #6A679E;
-	outline: none;
+.login__submit,
+.signup__submit {
+  background: #fff;
+  font-size: 14px;
+  margin-top: 30px;
+  padding: 16px 20px;
+  border-radius: 26px;
+  border: 1px solid #d4d3e8;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  color: #4c489d;
+  box-shadow: 0px 2px 2px #5c5696;
+  cursor: pointer;
+  transition: 0.2s;
 }
 
+.login__submit:active,
+.signup__submit:active,
+.login__submit:focus,
+.signup__submit:focus,
+.login__submit:hover,
+.signup__submit:hover {
+  border-color: #6a679e;
+  outline: none;
+}
