--- a/client/src/component/signup.css
+++ b/client/src/component/signup.css
@@ -1,28 +1,70 @@
-.login,
+/* signup.css */
+
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,700");
+
+body {
+  background: linear-gradient(90deg, #c7c5f4, #776bcc);
+  font-family: Raleway, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.screen {
+  background: linear-gradient(90deg, #5d54a4, #7c78b8);
+  position: relative;
+  height: 600px;
+  width: 360px;
+  box-shadow: 0px 0px 24px #5c5696;
+}
+
+.screen__content {
+  z-index: 1;
+  position: relative;
+  height: 100%;
+}
+
+.screen__background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+}
+
+.screen__background__shape {
+  transform: rotate(45deg);
+  position: absolute;
+}
+
+/* ... (you can keep the rest of the styles for background shapes, login and social login as they are) ... */
+
+/* Styles for Signup form */
+
 .signup {
   width: 320px;
   padding: 30px;
   padding-top: 156px;
 }
 
-.signup {
-  padding-top: 0px;
-}
-
-.login__field,
 .signup__field {
   padding: 20px 0px;
   position: relative;
 }
 
-.login__icon,
 .signup__icon {
   position: absolute;
   top: 30px;
   color: #7875b5;
 }
 
-.login__input,
 .signup__input {
   border: none;
   border-bottom: 2px solid #d1d1d4;
@@ -34,17 +76,13 @@
   transition: 0.2s;
 }
 
-.login__input:active,
 .signup__input:active,
-.login__input:focus,
 .signup__input:focus,
-.login__input:hover,
 .signup__input:hover {
   outline: none;
   border-bottom-color: #6a679e;
 }
 
-.login__submit,
 .signup__submit {
   background: #fff;
   font-size: 14px;
@@ -63,11 +101,8 @@
   transition: 0.2s;
 }
 
-.login__submit:active,
 .signup__submit:active,
-.login__submit:focus,
 .signup__submit:focus,
-.login__submit:hover,
 .signup__submit:hover {
   border-color: #6a679e;
   outline: none;
